2010-01-04  Yong Li  <yoli@rim.com>

Reviewed by Darin Adler.

        Let SharedBuffer use a group of memory segments internally.
        It will merge the segments into a flat consecutive buffer only when
        necessary.
        https://bugs.webkit.org/show_bug.cgi?id=33178

        * platform/SharedBuffer.cpp:
        (WebCore::allocateSegment):
        (WebCore::freeSegment):
        (WebCore::SharedBuffer::SharedBuffer):
        (WebCore::SharedBuffer::~SharedBuffer):
        (WebCore::SharedBuffer::adoptVector):
        (WebCore::SharedBuffer::size):
        (WebCore::SharedBuffer::data):
        (WebCore::SharedBuffer::append):
        (WebCore::SharedBuffer::clear):
        (WebCore::SharedBuffer::copy):
        (WebCore::SharedBuffer::buffer):
        (WebCore::SharedBuffer::getSomeData):
        * platform/SharedBuffer.h:
        * platform/cf/SharedBufferCF.cpp:
        (WebCore::SharedBuffer::maybeTransferPlatformData):
        * platform/haiku/SharedBufferHaiku.cpp:
        (WebCore::SharedBuffer::createWithContentsOfFile):
        * platform/qt/SharedBufferQt.cpp:
        (WebCore::SharedBuffer::createWithContentsOfFile):
        * platform/win/SharedBufferWin.cpp:
        (WebCore::SharedBuffer::createWithContentsOfFile):

Canonical link: https://commits.webkit.org/44208@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52795 268f45cc-cd09-0410-ab3c-d52691b4dbfc