WebCore/platform/SharedBuffer.h
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2006 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) Research In Motion Limited 2009-2010. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -73,11 +74,19 @@ public:
     static PassRefPtr<SharedBuffer> wrapCFData(CFDataRef);
 #endif
 
+    // Calling this function will force internal segmented buffers
+    // to be merged into a flat buffer. Use getSomeData() whenever possible
+    // for better performance.
     const char* data() const;
-    unsigned size() const;
-    const Vector<char> &buffer() { return m_buffer; }
 
-    bool isEmpty() const { return size() == 0; }
+    unsigned size() const;
+
+    // Calling this function will force internal segmented buffers
+    // to be merged into a flat buffer. Use getSomeData() whenever possible
+    // for better performance.
+    const Vector<char>& buffer() const;
+
+    bool isEmpty() const { return size(); }
 
     void append(const char*, int);
     void clear();
@@ -90,7 +99,21 @@ public:
 
     // Ensure this buffer has no other clients before calling this.
     PurgeableBuffer* releasePurgeableBuffer();
-    
+
+    // Return the number of consecutive bytes after "position". "data"
+    // points to the first byte.
+    // Return 0 when no more data left.
+    // When extracting all data with getSomeData(), the caller should
+    // repeat calling it until it returns 0.
+    // Usage:
+    //      const char* segment;
+    //      unsigned pos = 0;
+    //      while (unsigned length = sharedBuffer->getSomeData(segment, pos)) {
+    //          // Use the data. for example: decoder->decode(segment, length);
+    //          pos += length;
+    //      }
+    unsigned getSomeData(const char*& data, unsigned position = 0) const;
+
 private:
     SharedBuffer();
     SharedBuffer(const char*, int);
@@ -100,7 +123,9 @@ private:
     void maybeTransferPlatformData();
     bool hasPlatformData() const;
     
-    Vector<char> m_buffer;
+    unsigned m_size;
+    mutable Vector<char> m_buffer;
+    mutable Vector<char*> m_segments;
     OwnPtr<PurgeableBuffer> m_purgeableBuffer;
 #if PLATFORM(CF)
     SharedBuffer(CFDataRef);
@@ -110,4 +135,4 @@ private:
     
 }
 
-#endif
+#endif // SharedBuffer_h
